--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -74,8 +74,10 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build
-        env: NEXT_PUBLIC_GOOGLE_ID: ${{vars.NEXT_PUBLIC_GOOGLE_ID}}
+        run: |
+          ${{ steps.detect-package-manager.outputs.runner }} next build
+        env:
+          NEXT_PUBLIC_GOOGLE_ID: ${{vars.NEXT_PUBLIC_GOOGLE_ID}}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
